# mybatis-example

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: user_api.rs
src/common/: error.rs  mod.rs  result.rs  result_code.rs
src/config/: database.rs  mod.rs
src/dao/: user_dao.rs
src/domain/: mod.rs
src/domain/dto/: user.rs
src/domain/entity/: mod.rs  nucleic_institution.rs  nucleic_registe.rs  role.rs  user.rs  user_role.rs
src/resource/: application.yml
src/service/: user_service.rs
