[package]
name = "covid-mange-admin"
version = "0.1.0"
authors = ["James Zow <jameszow@163.com>"]
edition = "2021"
publish = false

[dependencies]
mybatis = "1.0.8"
actix-web = "4.0.1"
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
tokio = { version = "1.18.2", features = ["full"] }
