[package]
name = "covid-mange-admin"
version = "0.1.0"
authors = ["James Zow <jameszow@163.com>"]
edition = "2021"
publish = false

[dependencies]
mybatis = "1.0.8"
actix-web = "4.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rbson = "2.0"
tokio = { version = "1.18.2", features = ["full"] }
lazy_static = "1.4.0"
async-trait = "0.1.53"
log = "0.4.17"

[target.x86_64-unknown-linux-gnu]
linker = "rust-lld"